Update ProductControllerTest.java